finished working angularjs portion

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>Waitstaff Calculator</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Itim' rel='stylesheet' type='text/css'>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js"></script>
+	<script data-require="angular.js@1.3.10" data-semver="1.3.10" src="https://code.angularjs.org/1.3.10/angular.js"></script>
 </head>
-<body>
+<body ng-controller="MyCtrl">
 	<header>
 		<h1 class="header">Waitstaff Calculator</h1>
 	</header>
@@ -26,7 +26,7 @@
 									<label for="price">Base Meal Price: $</label>
 								</td>	
 								<td>
-									<input type="number" name="price" class="meal" />
+									<input type="number" name="price" class="meal" ng-model="price" />
 								</td>
 							</tr>
 							<tr>
@@ -34,7 +34,7 @@
 									<label for="taxRate">Tax Rate: %</label>
 								</td>	
 								<td>
-									<input type="number" name="taxRate" class="tax" />			
+									<input type="number" name="taxRate" class="tax" ng-model="taxRate" />			
 								</td>
 							</tr>
 							<tr>
@@ -42,15 +42,15 @@
 									<label for="tipPercent">Tip Percentage: %</label>
 								</td>	
 								<td>
-									<input type="number" name="tipPercent" class="tax" />		
+									<input type="number" name="tipPercent" class="tax" ng-model="tipPercent" />		
 								</td>
 							</tr>
 							<tr class="submitRow">
 								<td width="50%">
-									<input type="submit" class="submit" value="Submit" />
+									<input type="submit" class="submit" value="Submit" ng-click="submit()"/>
 								</td>	
 								<td>
-									<button class="cancel">Cancel</button>			
+									<button class="cancel" ng-click="cancel()">Cancel</button>			
 								</td>
 							</tr>
 						</tbody>
@@ -65,27 +65,27 @@
 					<h2>Customer Charges</h2>
 				</div>
 				<div class="chargesTotal">
-					<p>Subtotal: 0.00</p>
-					<p>Tip: 0.00</p>
+					<p>Subtotal: {{ subTotal | currency }}</p>
+					<p>Tip: {{ tip | currency }}</p>
 					<hr>
-					<p>Total: 0.00</p>
+					<p>Total: {{ total | currency }}</p>
 				</div>
 			</div>
 			<div class="earningsBox">
 				<div class="boxTitle">
-					<h2>Customer Charges</h2>
+					<h2>My Earnings Info</h2>
 				</div>
 				<div class="earningsTotal">
-					<p>Tip Total: 0.00</p>
-					<p>Meal Count: 0</p>
-					<p>Average Tip Per Meal: 0.00</p>
+					<p>Tip Total: {{ tipTotal | currency }}</p>
+					<p>Meal Count: {{ mealCount }}</p>
+					<p>Average Tip Per Meal: {{ avgTip | currency }}</p>
 				</div>
 			</div>
 		</div>
 		
 	</div>
 	<div class="footer">
-		<button class="reset">Reset</button>
+		<button class="reset" ng-click="reset()">Reset</button>
 	</div>
 
 	<script src="js/myApp.js" type="text/javascript"></script>	
